--- a/index.html
+++ b/index.html
@@ -608,10 +608,10 @@
             <h2 class="section-title">Skills</h2>
 
             <!-- Soft Skills -->
-            <div class="skills-columns">
-                <div class="skill-card">
+            <div class="skills-grid">
+                <div class="skill-category">
                     <h3><i class="fas fa-users"></i> Soft Skills</h3>
-                    <ul class="card-list">
+                    <ul class="env-list">
                         <li>Teamwork</li>
                         <li>Leadership</li>
                         <li>Adaptability</li>
@@ -628,9 +628,9 @@
                 <div class="skills-columns">
 
                     <!-- Expert -->
-                    <div class="skill-card">
+                    <div class="skill-column">
                         <h4>Expert</h4>
-                        <ul class="card-list">
+                        <ul class="skill-list">
                             <li>C</li>
                             <li>C++</li>
                             <li>Python</li>
@@ -638,9 +638,9 @@
                     </div>
 
                     <!-- Intermediate -->
-                    <div class="skill-card">
+                    <div class="skill-column">
                         <h4>Intermediate</h4>
-                        <ul class="card-list">
+                        <ul class="skill-list">
                             <li>Java</li>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -648,9 +648,9 @@
                     </div>
 
                     <!-- Beginner -->
-                    <div class="skill-card">
+                    <div class="skill-column">
                         <h4>Beginner</h4>
-                        <ul class="card-list">
+                        <ul class="skill-list">
                             <li>JavaScript</li>
                             <li>C#</li>
                             <li>.NET</li>
@@ -696,35 +696,46 @@
 
             </div>
 
-            <!-- Environments & Tools -->
-            <div class="skills-columns">
-                <div class="skill-card">
-                    <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
-                    <ul class="card-list">
-                        <li><i class="fab fa-windows"></i> Windows</li>
-                        <li><i class="fab fa-linux"></i> Linux</li>
-                        <li><i class="fas fa-terminal"></i> WSL</li>
-                        <li><i class="fas fa-code"></i> Visual Studio</li>
-                        <li><i class="fas fa-laptop-code"></i> JetBrains IDE</li>
-                        <li><i class="fab fa-git-alt"></i> Git</li>
-                        <li><i class="fab fa-github"></i> GitHub</li>
-                        <li><i class="fab fa-gitlab"></i> GitLab</li>
-                    </ul>
-                </div>
+            <!-- Environments & Tools as a styled list -->
+            <div class="skill-category">
+                <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
+                <ul class="env-list">
+                    <li><i class="fab fa-windows"></i> Windows</li>
+                    <li><i class="fab fa-linux"></i> Linux</li>
+                    <li><i class="fas fa-terminal"></i> WSL</li>
+                    <li><i class="fas fa-code"></i> Visual Studio</li>
+                    <li><i class="fas fa-laptop-code"></i> JetBrains IDE</li>
+                    <li><i class="fab fa-git-alt"></i> Git</li>
+                    <li><i class="fab fa-github"></i> GitHub</li>
+                    <li><i class="fab fa-gitlab"></i> GitLab</li>
+                </ul>
             </div>
 
         </div>
     </section>
 
     <style>
-        /* Grid layout */
+        /* Extra styling for 3-column layout */
         .skills-columns {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
         }
+        .skill-column h4 {
+            margin-bottom: 0.5rem;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+        .skill-list {
+            list-style: none;
+            padding: 0;
+        }
+        .skill-list li::before {
+            content: "✔ ";
+            color: #4CAF50;
+        }
 
-        /* Unified card style */
+        /* Skill cards with hover */
         .skill-card {
             background: #f5f5f5;
             padding: 16px;
@@ -736,29 +747,46 @@
             background: #e0e0e0;
             transform: translateY(-4px);
         }
-        .skill-card h3, .skill-card h4 {
+        .skill-card h3 {
             margin-bottom: 12px;
             color: #333;
         }
-
-        /* Unified list style */
         .card-list {
             list-style: none;
             padding: 0;
-        }
-        .card-list li {
-            margin-bottom: 6px;
-            font-weight: 500;
-            display: flex;
-            align-items: center;
         }
         .card-list li::before {
             content: "➤ ";
             color: #4CAF50;
             font-weight: bold;
-            margin-right: 6px;
+        }
+
+        /* Styled environment list */
+        .env-list {
+            list-style: none;
+            padding: 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 0.5rem 1rem;
+        }
+        .env-list li {
+            background: #f5f5f5;
+            padding: 8px 12px;
+            border-radius: 6px;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: background 0.3s, transform 0.3s;
+        }
+        .env-list li:hover {
+            background: #e0e0e0;
+            transform: translateX(4px);
         }
     </style>
+
+
+
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
