--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio - Professional Developer</title>
+    <title>Paul Quinzi Portfolio - Computer science engineer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -249,16 +249,16 @@
             gap: 2rem;
         }
 
-        /* Ombre verte pour toutes les div de la section skills */
-        .skills-grid div {
-            box-shadow: 0 10px 30px rgba(45, 138, 87, 0.2);
+        .skill-category {
+            background: var(--background-light);
+            padding: 2rem;
             border-radius: 10px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: var(--shadow);
+            transition: transform 0.3s ease;
         }
 
         .skill-category:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(45, 138, 87, 0.25);
         }
 
         .skill-category h3 {
@@ -289,88 +289,194 @@
         .skill-progress {
             height: 100%;
             background: var(--gradient);
+            border-radius: 4px;
             animation: fillBar 2s ease-in-out;
         }
 
-        /* 3-column layout for programming languages */
-        .skills-columns {
+        /* Projects Section */
+        .projects-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 2rem;
         }
 
-        .skill-column h4 {
-            margin-bottom: 0.5rem;
-            color: #4CAF50;
-            font-weight: bold;
+        .project-card {
+            background: var(--card-background);
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: var(--shadow);
+            transition: all 0.3s ease;
         }
 
-        .skill-list {
-            list-style: none;
-            padding: 0;
+        .project-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(45, 138, 87, 0.15);
         }
 
-        .skill-list li::before {
-            content: "✔ ";
-            color: #4CAF50;
-        }
-
-        /* Skill cards */
-        .skill-card {
-            background: var(--background-light);
-            padding: 16px;
-            border-radius: 8px;
-            transition: background 0.3s, transform 0.3s;
-        }
-
-        .skill-card:hover {
-            background: #e0e0e0;
-            transform: translateY(-4px);
-        }
-
-        .skill-card h3 {
-            margin-bottom: 12px;
-            color: #333;
-        }
-
-        .card-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .card-list li::before {
-            content: "➤ ";
-            color: #4CAF50;
-            font-weight: bold;
-        }
-
-        /* Styled environment list */
-        .env-list {
-            list-style: none;
-            padding: 0;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 0.5rem 1rem;
-        }
-
-        .env-list li {
-            background: #f5f5f5;
-            padding: 8px 12px;
-            border-radius: 6px;
-            font-weight: 500;
+        .project-image {
+            height: 200px;
+            background: var(--gradient);
             display: flex;
             align-items: center;
-            gap: 8px;
-            transition: background 0.3s, transform 0.3s;
+            justify-content: center;
+            color: var(--text-light);
+            font-size: 3rem;
         }
 
-        .env-list li:hover {
-            background: #e0e0e0;
-            transform: translateX(4px);
+        .project-content {
+            padding: 1.5rem;
         }
 
-        /* Other sections remain unchanged (Projects, Contact, Footer, Hero, etc.) */
-        /* ... include your existing styles for projects, contact, footer, etc. ... */
+        .project-content h3 {
+            color: var(--primary-green);
+            margin-bottom: 1rem;
+        }
+
+        .project-content p {
+            margin-bottom: 1.5rem;
+            color: var(--text-dark);
+        }
+
+        .project-links {
+            display: flex;
+            gap: 1rem;
+        }
+
+        .project-link {
+            padding: 8px 16px;
+            background: var(--primary-green);
+            color: var(--text-light);
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 0.9rem;
+            transition: background 0.3s ease;
+        }
+
+        .project-link:hover {
+            background: var(--dark-green);
+        }
+
+        /* Contact Section */
+        .contact {
+            background: var(--gradient);
+            color: var(--text-light);
+        }
+
+        .contact-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 3rem;
+        }
+
+        .contact-info h3 {
+            margin-bottom: 1.5rem;
+            font-size: 1.5rem;
+        }
+
+        .contact-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1rem;
+            gap: 1rem;
+        }
+
+        .contact-item i {
+            font-size: 1.2rem;
+            width: 20px;
+        }
+
+        .contact-form {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 2rem;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+        }
+
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: 500;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.9);
+            color: var(--text-dark);
+            font-size: 1rem;
+        }
+
+        .form-group textarea {
+            height: 120px;
+            resize: vertical;
+        }
+
+        .profile-pic {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: var(--gradient);
+        }
+
+        .profile-pic img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+
+
+        .submit-btn {
+            background: var(--card-background);
+            color: var(--primary-green);
+            padding: 12px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .submit-btn:hover {
+            background: var(--light-green);
+            color: var(--text-light);
+        }
+
+        /* Footer */
+        footer {
+            background: var(--dark-green);
+            color: var(--text-light);
+            text-align: center;
+            padding: 2rem 0;
+        }
+
+        .social-links {
+            margin-bottom: 1rem;
+        }
+
+        .social-links a {
+            color: var(--text-light);
+            font-size: 1.5rem;
+            margin: 0 1rem;
+            transition: color 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: var(--light-green);
+        }
 
         /* Animations */
         @keyframes fadeInUp {
