--- a/index.html
+++ b/index.html
@@ -719,17 +719,20 @@
         .skills-columns {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 2rem;
+            gap: 1.5rem; /* Ajout d'un léger écart entre les cards */
         }
+
         .skill-column h4 {
             margin-bottom: 0.5rem;
             color: #4CAF50;
             font-weight: bold;
         }
+
         .skill-list {
             list-style: none;
             padding: 0;
         }
+
         .skill-list li::before {
             content: "➤  ";
             color: #4CAF50;
@@ -741,19 +744,24 @@
             padding: 16px;
             border-radius: 8px;
             transition: background 0.3s, transform 0.3s;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 30px rgba(45, 138, 87, 0.2); /* Ombre verte */
         }
+
         .skill-card:hover {
             transform: translateY(-4px);
+            box-shadow: 0 15px 40px rgba(45, 138, 87, 0.25); /* Hover plus prononcé */
         }
+
         .skill-card h3 {
             margin-bottom: 12px;
             color: #333;
         }
+
         .card-list {
             list-style: none;
             padding: 0;
         }
+
         .card-list li::before {
             content: "➤ ";
             color: #4CAF50;
@@ -768,6 +776,7 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 0.5rem 1rem;
         }
+
         .env-list li {
             background: #f5f5f5;
             padding: 8px 12px;
@@ -778,12 +787,12 @@
             gap: 8px;
             transition: background 0.3s, transform 0.3s;
         }
+
         .env-list li:hover {
             background: #e0e0e0;
             transform: translateX(4px);
         }
     </style>
-
 
 
 
