--- a/index.html
+++ b/index.html
@@ -852,6 +852,104 @@
         </div>
     </section>
 
+    <!-- Interests Section -->
+    <section id="interests" class="interests">
+        <div class="container">
+            <h2 class="section-title">My Interests</h2>
+            <div class="interests-grid">
+                <!-- Athlétisme -->
+                <div class="interest-card">
+                    <div class="interest-front">
+                        <h3><i class="fas fa-running"></i> Athlétisme</h3>
+                        <p>Passionné par la course et la discipline sportive.</p>
+                    </div>
+                    <div class="interest-back">
+                        <video src="athletisme.mp4" autoplay muted loop></video>
+                    </div>
+                </div>
+
+                <!-- Géographie -->
+                <div class="interest-card">
+                    <div class="interest-front">
+                        <h3><i class="fas fa-globe-europe"></i> Géographie</h3>
+                        <p>Exploration et découverte du monde à travers les cartes.</p>
+                    </div>
+                    <div class="interest-back">
+                        <video src="geographie.mp4" autoplay muted loop></video>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <style>
+        .interests {
+            background: var(--background-light);
+        }
+
+        .interests-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .interest-card {
+            position: relative;
+            width: 100%;
+            height: 250px;
+            perspective: 1000px;
+        }
+
+        .interest-front,
+        .interest-back {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 15px;
+            backface-visibility: hidden;
+            box-shadow: var(--shadow);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.8s ease;
+        }
+
+        .interest-front {
+            background: var(--card-background);
+            text-align: center;
+            padding: 1.5rem;
+        }
+
+        .interest-front h3 {
+            color: var(--primary-green);
+            margin-bottom: 1rem;
+        }
+
+        .interest-back {
+            transform: rotateY(180deg);
+            overflow: hidden;
+        }
+
+        .interest-back video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 15px;
+        }
+
+        .interest-card:hover .interest-front {
+            transform: rotateY(180deg);
+        }
+
+        .interest-card:hover .interest-back {
+            transform: rotateY(360deg);
+        }
+    </style>
+
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
