--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Paul Quinzi Portfolio - Computer science engineer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -35,7 +35,8 @@
     <div class="container">
         <div class="hero-content">
             <h1>Welcome to My Portfolio</h1>
-            <p class="hero-subtitle">Computer Science & Modeling Engineer | From code to strategy, leading teams and connecting domains</p>
+            <p class="hero-subtitle">Computer Science & Modeling Engineer | From code to strategy, leading teams and
+                connecting domains</p>
             <a href="#about" class="cta-button">Learn More About Me</a>
         </div>
     </div>
@@ -53,9 +54,16 @@
             </div>
             <div class="about-text">
                 <h3>Hello! I’m a Computer Science and Modeling Engineer</h3>
-                <p>I’m passionate about software development, algorithms, and problem-solving. With experience ranging from video game design to embedded systems, I enjoy transforming complex ideas into reliable, efficient, and creative solutions.</p>
-                <p>My journey has taken me through a variety of projects: developing an official Tetris game, creating a Minecraft port on Wii under strict constraints, and building a sports database web application during an international internship at Trinity College Dublin. Currently, I’m applying my skills at Michelin, where I work on predictive maintenance algorithms in embedded systems.</p>
-                <p>Beyond coding, I enjoy exploring fields like machine learning, optimization, and 3D modeling. I also cultivate personal passions in music, athletics, and geography, which keep me curious, disciplined, and creative in both work and life.</p>
+                <p>I’m passionate about software development, algorithms, and problem-solving. With experience ranging
+                    from video game design to embedded systems, I enjoy transforming complex ideas into reliable,
+                    efficient, and creative solutions.</p>
+                <p>My journey has taken me through a variety of projects: developing an official Tetris game, creating a
+                    Minecraft port on Wii under strict constraints, and building a sports database web application
+                    during an international internship at Trinity College Dublin. Currently, I’m applying my skills at
+                    Michelin, where I work on predictive maintenance algorithms in embedded systems.</p>
+                <p>Beyond coding, I enjoy exploring fields like machine learning, optimization, and 3D modeling. I also
+                    cultivate personal passions in music, athletics, and geography, which keep me curious, disciplined,
+                    and creative in both work and life.</p>
             </div>
         </div>
     </div>
@@ -184,7 +192,8 @@
                 </div>
                 <div class="project-content">
                     <h3>E-Commerce Platform</h3>
-                    <p>A modern, responsive e-commerce platform built with React and Node.js, featuring user authentication, payment integration, and admin dashboard.</p>
+                    <p>A modern, responsive e-commerce platform built with React and Node.js, featuring user
+                        authentication, payment integration, and admin dashboard.</p>
                     <div class="project-links">
                         <a href="#" class="project-link">Live Demo</a>
                         <a href="#" class="project-link">GitHub</a>
@@ -197,7 +206,8 @@
                 </div>
                 <div class="project-content">
                     <h3>Task Management App</h3>
-                    <p>A collaborative task management application with real-time updates, drag-and-drop functionality, and team collaboration features.</p>
+                    <p>A collaborative task management application with real-time updates, drag-and-drop functionality,
+                        and team collaboration features.</p>
                     <div class="project-links">
                         <a href="#" class="project-link">Live Demo</a>
                         <a href="#" class="project-link">GitHub</a>
@@ -210,7 +220,8 @@
                 </div>
                 <div class="project-content">
                     <h3>Data Visualization Dashboard</h3>
-                    <p>An interactive dashboard for data visualization with multiple chart types, filtering capabilities, and real-time data updates.</p>
+                    <p>An interactive dashboard for data visualization with multiple chart types, filtering
+                        capabilities, and real-time data updates.</p>
                     <div class="project-links">
                         <a href="#" class="project-link">Live Demo</a>
                         <a href="#" class="project-link">GitHub</a>
@@ -255,51 +266,53 @@
 <section id="contact" class="contact">
     <div class="container">
         <h2 class="section-title contact-title">Get In Touch</h2>
-        <p> Please don’t hesitate to reach out via the following form !</p>
-            <form class="contact-form" id="contact-form">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="from_name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="reply_to" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Send Message</button>
-            </form>
+        <p class="contact-intro">
+            Please don’t hesitate to reach out via the following form!
+        </p>
+        <form class="contact-form" id="contact-form">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="from_name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="reply_to" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
 
-            <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-            <script>
-                (function() {
-                    emailjs.init("6ZQgQEWG5Bni5KHHZ");
-                })();
+        <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+        <script>
+            (function () {
+                emailjs.init("6ZQgQEWG5Bni5KHHZ");
+            })();
 
-                document.getElementById('contact-form').addEventListener('submit', function(e) {
-                    e.preventDefault();
-                    const form = this;
-                    const btn = form.querySelector('button');
+            document.getElementById('contact-form').addEventListener('submit', function (e) {
+                e.preventDefault();
+                const form = this;
+                const btn = form.querySelector('button');
 
-                    btn.textContent = 'Sending...';
+                btn.textContent = 'Sending...';
 
-                    const serviceID = 'service_or2o21d';
-                    const templateID = 'template_jpd1uew';
+                const serviceID = 'service_or2o21d';
+                const templateID = 'template_jpd1uew';
 
-                    emailjs.sendForm(serviceID, templateID, form)
-                        .then(() => {
-                            alert('✅ Thank you for your message! I will get back to you soon.');
-                            form.reset();
-                            btn.textContent = 'Send Message';
-                        }, (error) => {
-                            alert('❌ Oops! Something went wrong...\n' + JSON.stringify(error));
-                            btn.textContent = 'Send Message';
-                        });
-                });
-            </script>
-        </div>
+                emailjs.sendForm(serviceID, templateID, form)
+                    .then(() => {
+                        alert('✅ Thank you for your message! I will get back to you soon.');
+                        form.reset();
+                        btn.textContent = 'Send Message';
+                    }, (error) => {
+                        alert('❌ Oops! Something went wrong...\n' + JSON.stringify(error));
+                        btn.textContent = 'Send Message';
+                    });
+            });
+        </script>
+    </div>
     </div>
 </section>
 
@@ -330,7 +343,7 @@
     });
 
     // Navbar scroll effect
-    window.addEventListener('scroll', function() {
+    window.addEventListener('scroll', function () {
         const navbar = document.getElementById('navbar');
         if (window.scrollY > 50) {
             navbar.classList.add('scrolled');
@@ -345,7 +358,7 @@
         rootMargin: '0px 0px -50px 0px'
     };
 
-    const observer = new IntersectionObserver(function(entries) {
+    const observer = new IntersectionObserver(function (entries) {
         entries.forEach(entry => {
             if (entry.isIntersecting) {
                 const skillBars = entry.target.querySelectorAll('.skill-progress');
@@ -361,7 +374,7 @@
     });
 
     // Mobile menu toggle (basic implementation)
-    document.querySelector('.mobile-menu').addEventListener('click', function() {
+    document.querySelector('.mobile-menu').addEventListener('click', function () {
         const navMenu = document.querySelector('.nav-menu');
         navMenu.style.display = navMenu.style.display === 'flex' ? 'none' : 'flex';
     });
